更改文件里的错误

--- a/microcloud-config-eureka-7001.yml
+++ b/microcloud-config-eureka-7001.yml
@@ -30,7 +30,7 @@ security:
     password: hello 
 ---
 spring:
-  profiles: beta
+  profiles: dev
   application:
     name: microcloud-config-eureka-7001 
 
